--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <tbody>
             <tr>
                 <td>2019</td>
-                <td>Programmer at PT Integra</td>
+                <td>Programmer at <a href="http://www.integra-pratama.co.id/">PT Integra Pratama</a></td>
             </tr>
         </tbody>
     </table>
