--- a/index.html
+++ b/index.html
@@ -27,18 +27,43 @@
         <li><a href="http://miplus.asy-syukriyyah.sch.id/">MI Plus Asy-Syukriyyah</a></li>
     </ul>
     <hr>
-    <h3>Work Experience</h3>
+ <h3>Work Experience</h3>
     <table cellspacing="10">
         <thead>
             <tr>
                 <th>Dates</th>
-                <th>Work</th>
+                <th>Position</th>
+                <th>Company</th>
             </tr>
         </thead>
         <tbody>
             <tr>
                 <td>2019</td>
-                <td>Programmer at <a href="http://www.integra-pratama.co.id/">PT Integra Pratama</a></td>
+                <td>Programmer</td>
+                <td><a href="http://www.integra-pratama.co.id/">PT Integra Pratama </a> </td>
+            </tr>
+        </tbody>
+    </table>
+
+    <h3>Internship</h3>
+    <table cellspacing="10">
+        <thead>
+            <tr>
+                <th>Dates</th>
+                <th>Work</th>
+                <th>Company</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>2018</td>
+                <td>Personal Service</td>
+                <td><a href="https://wifi.id/">PT Telkom</a></td>
+            </tr>
+            <tr>
+                <td>2020</td>
+                <td>Programmer</td>
+                <td>PT Indonesia Kreasi Mandiri</td>
             </tr>
         </tbody>
     </table>
